@@ -5,6 +5,8 @@ Release 5.0.6 (unreleased)
 Bug fixes
 ---------
 
+- GUI: ensure runcase and current XML file are consistent before running.
+
 - Fix synchro. of order 3 tensor in iterative tensor gradient in case of
   periodicity of rotation.
 
